调通用户注册

--- a/gateway/src/main/resources/bootstrap.properties
+++ b/gateway/src/main/resources/bootstrap.properties
@@ -1,14 +1,14 @@
-spring.application.name=edu-gateway
+spring.application.name=base-gateway
 
 spring.cloud.nacos.config.name=gateway
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.namespace=c4039ab2-470f-4594-b902-c7f3aaafccee
 
 
-spring.cloud.nacos.config.ext-config[0].data-id=edu-routes.yml
+spring.cloud.nacos.config.ext-config[0].data-id=base-routes.yml
 spring.cloud.nacos.config.ext-config[0].group=dev
 spring.cloud.nacos.config.ext-config[0].refresh=true
 
-spring.cloud.nacos.config.ext-config[1].data-id=edu-gateway.yml
+spring.cloud.nacos.config.ext-config[1].data-id=base-gateway.yml
 spring.cloud.nacos.config.ext-config[1].group=dev
 spring.cloud.nacos.config.ext-config[1].refresh=true
