--- a/edu-admin/package.json
+++ b/edu-admin/package.json
@@ -34,6 +34,7 @@
         "sass-loader": "6.0.6",
         "summernote": "^0.8.16",
         "svg-sprite-loader": "3.7.3",
+        "tui-editor": "^1.4.10",
         "vue": "2.5.16",
         "vue-cookie": "1.1.4",
         "vue-router": "3.0.1",
